[gd_scene load_steps=5 format=3 uid="uid://djxn6rsrh4dwb"]

[ext_resource type="PackedScene" uid="uid://3j7l1fr2fymy" path="res://Components/Hitbox.tscn" id="1_bjl7l"]
[ext_resource type="Script" path="res://Items/drill/Drill.gd" id="1_gwf5o"]
[ext_resource type="PackedScene" uid="uid://qv4jax8j6sju" path="res://Assets/Models/Taladro.fbx" id="3_ltgut"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_vv5tg"]
height = 0.21641
radius = 0.0904048

[node name="Drill" type="Node3D"]
script = ExtResource("1_gwf5o")

[node name="Hitbox" parent="." instance=ExtResource("1_bjl7l")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.149002)
shape = SubResource("CylinderShape3D_vv5tg")
disabled = true

[node name="collideMonitor" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionMonitor" type="CollisionShape3D" parent="collideMonitor"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.149002)
shape = SubResource("CylinderShape3D_vv5tg")
disabled = true

[node name="Root Scene" parent="." instance=ExtResource("3_ltgut")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00828907, 0, -0.0575577)

[connection signal="area_entered" from="collideMonitor" to="." method="_on_collide_monitor_area_entered"]
